--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>gibbylingo match 200k</title>
+<link rel="icon" type="image/png" href="https://web.dev/static/articles/building/an-adaptive-favicon/image/example-dark-theme-favico-6a6f6f67bc3e7.png">
 <style>
     @font-face {
         font-family: 'Gunglish';
@@ -23,10 +24,11 @@
 
     h1 {
         margin-bottom: 20px;
+        font-size: 48px; /* bigger title */
     }
 
     #sentence {
-        font-size: 24px;
+        font-size: 32px; /* bigger sentence text */
         margin-bottom: 30px;
         text-align: center;
         max-width: 90%;
@@ -40,15 +42,15 @@
     }
 
     .card {
-        width: 250px;
-        height: 120px;
+        width: 300px; /* bigger card */
+        height: 150px; /* taller card */
         background: #fff;
         border: 3px solid #f00;
         display: flex;
         align-items: center;
         justify-content: center;
         font-family: 'Gunglish', sans-serif;
-        font-size: 22px;
+        font-size: 28px; /* bigger card text */
         text-transform: uppercase;
         cursor: pointer;
         transition: 0.3s;
@@ -62,15 +64,15 @@
     }
 
     #feedback {
-        font-size: 24px;
+        font-size: 32px; /* bigger feedback text */
         margin-top: 30px;
-        height: 30px;
+        height: 40px;
     }
 
     button {
         margin-top: 20px;
-        padding: 10px 20px;
-        font-size: 18px;
+        padding: 15px 25px; /* bigger button */
+        font-size: 22px; /* bigger button text */
         cursor: pointer;
         border: 2px solid #f00;
         background: #fff;
@@ -92,9 +94,9 @@
 <button onclick="nextRound()">next sentence</button>
 
 <script>
-// generate 200,000 random “sentences” for demo
+// generate 200,000 random sentences for demo
 const sentences = [];
-const words = ["hello","friend","goodbye","pal","yes","agree","no","way","hungry","i","am","you","are","we","like","go","play","fun","game"];
+const words = ["ball, cat, sad, friend, happy, dog, run, jump, sun, moon, star, sky, cloud, rain, snow, tree, leaf, flower, grass, rock, river, lake, ocean, fish, bird, frog, ant, bug, worm, snake, lion, tiger, bear, wolf, fox, mouse, rabbit, horse, cow, pig, sheep, goat, chicken, duck, hen, nest, egg, food, cake, bread, milk, juice, water, soda, candy, chocolate, cookie, ice, cream, butter, cheese, pizza, burger, fries, pasta, rice, soup, salad, fruit, apple, banana, orange, grape, lemon, lime, pear, peach, plum, cherry, berry, strawberry, raspberry, blueberry, melon, watermelon, honey, sugar, salt, pepper, spice, soup, meat, chicken, beef, pork, fish, crab, shrimp, lobster, egg, breakfast, lunch, dinner, snack, kitchen, oven, stove, pan, pot, knife, fork, spoon, plate, cup, glass, bowl, napkin, table, chair, bed, pillow, blanket, sheet, curtain, lamp, light, fan, window, door, wall, floor, carpet, rug, shelf, book, pen, pencil, paper, notebook, marker, chalk, eraser, ruler, bag, backpack, wallet, phone, computer, laptop, tablet, mouse, keyboard, screen, chair, desk, school, teacher, student, class, lesson, test, homework, book, library, library, library, playground, swing, slide, monkey, bars, sand, ball, jump, run, hide, tag, game, fun, play, friend, buddy, pal, team, group, family, mom, dad, brother, sister, uncle, aunt, cousin, grandma, grandpa, house, home, room, kitchen, bathroom, bedroom, living, dining, garden, yard, car, bus, train, plane, bike, skateboard, scooter, boat, ship, traffic, street, road, path, bridge, tunnel, light, sign, stop, go, walk, run, fast, slow, turn, left, right, straight, circle, square, triangle, rectangle, color, red, blue, green, yellow, orange, purple, pink, black, white, gray, brown, gold, silver, shiny, bright, dark, shadow, light, sun, moon, star, planet, space, rocket, astronaut, alien, monster, ghost, witch, wizard, dragon, knight, sword, shield, castle, tower, cave, forest, jungle, desert, mountain, hill, river, lake, ocean, sea, wave, sand, rock, stone, leaf, flower, tree, bush, grass, moss, dirt, mud, clay, fire, smoke, ash, flame, heat, cold, snow, ice, rain, storm, wind, air, cloud, sky, rainbow, lightning, thunder, sound, music, song, drum, guitar, piano, violin, trumpet, flute, horn, bell, whistle, clap, cheer, laugh, cry, smile, frown, hug, kiss, hand, foot, head, eye, ear, nose, mouth, hair, face, skin, arm, leg, finger, toe, nail, teeth, tongue, heart, brain, bone, blood, breath, sleep, dream, wake, eat, drink, cook, bake, clean, wash, brush, comb, run, jump, skip, hop, walk, crawl, swim, dive, fly, climb, fall, push, pull, lift, throw, catch, break, fix, build, draw, paint, write, read, sing, dance, shout, whisper, listen, watch, look, see, hear, feel, touch, taste, smell, think, learn, know, remember, forget, ask, answer, tell, call, shout, talk, speak, say, read, write, draw, color, play, work, help, share, give, take, open, close, start, stop, wait, go, come, run, walk, jump, skip, hop, sit, stand, lie, bend, stretch, move, rest, sleep, wake, eat, drink, cook, bake, clean, wash, brush, comb, read, write, draw, color, play, game, fun, laugh, smile, cry, frown, hug, kiss, touch, hold, lift, push, pull, carry, throw, catch, break, fix, build, create, destroy, love, like, hate, need, want, wish, hope, dream, plan, think, know, learn, teach, listen, hear, speak, say, tell, call, shout, whisper, watch, see, look, touch, feel, taste, smell, move, stop, start, begin, end, wait, run, walk, jump, skip, hop, climb, fall, rise, grow, shrink, change, stay, sit, stand, lie, bend, stretch, open, close, lock, unlock, push, pull, give, take, buy, sell, pay, earn, spend, save, lose, win, find, lose, keep, break, fix, build, create, destroy, clean, dirty, wash, dry, wet, hot, cold, warm, cool, fast, slow, early, late, young, old, new, old, big, small, tall, short, long, short, wide, narrow, thick, thin, deep, shallow, high, low, near, far, inside, outside, up, down, left, right, forward, backward, around, over, under, above, below, first, last, next, previous, same, different, good, bad, better, worse, best, worst, happy, sad, angry, calm, scared, brave, strong, weak, rich, poor, hungry, full, tired, awake, asleep, sick, healthy, clean, dirty, wet, dry, bright, dark, light, heavy, light, open, closed, locked, unlocked, loud, quiet, noisy, silent, fast, slow, quick, lazy, early, late, busy, free, empty, full, hard, soft, rough, smooth, sharp, dull, hot, cold, warm, cool"];
 
 for(let i=0;i<200000;i++){
     let len = Math.floor(Math.random()*5)+2; // sentence length 2-6 words
@@ -118,7 +120,11 @@ function nextRound() {
     document.getElementById('sentence').innerText = currentSentence;
 
     const cards = document.querySelectorAll('.card');
-    const options = shuffleArray([currentSentence, sentences[Math.floor(Math.random() * sentences.length)], sentences[Math.floor(Math.random() * sentences.length)]]);
+    const options = shuffleArray([
+        currentSentence,
+        sentences[Math.floor(Math.random() * sentences.length)],
+        sentences[Math.floor(Math.random() * sentences.length)]
+    ]);
 
     cards.forEach((card, i) => {
         card.innerText = options[i].toUpperCase();
