--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>gibbylingo match 200k</title>
+<title>gunglish learning</title>
 <link rel="icon" type="image/png" href="https://web.dev/static/articles/building/an-adaptive-favicon/image/example-dark-theme-favico-6a6f6f67bc3e7.png">
 <style>
     @font-face {
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-<h1>gibbylingo match game</h1>
+<h1>gunglish learning</h1>
 <p id="sentence">Loading sentence...</p>
 
 <div class="cards">
