--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <script>
 // generate 200,000 random sentences for demo
 const sentences = [];
-const words = ["ball, cat, write, read, sing, dance, shout, whisper, listen, watch, look, see, hear, feel, touch, taste, smell, think, learn, know, remember, free, empty, full, hard, soft, rough, smooth, sharp, dull, hot, cold, warm, cool"];
+const words = ["ball, cat, write, read, sing, dance, cold fries, Mcdonald's"];
 
 for(let i=0;i<200000;i++){
     let len = Math.floor(Math.random()*5)+2; // sentence length 2-6 words
